--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,11 @@
-version: "3.9"
+# Use root/example as user/password credentials
+version: '3.1'
 
 services:
+
   db:
-    image: mysql:5.7
-    volumes:
-      - db_data:/var/lib/mysql
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: express
-      MYSQL_DATABASE: express
-      MYSQL_USER: express
-      MYSQL_PASSWORD: express
-volumes:
-  db_data: {}
+      MYSQL_ROOT_PASSWORD: example
